overflow fix in landing page

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,11 @@
   background-size: 100% 100%;   
   overflow: auto;
 }
+
+.clearfix{
+  overflow: auto;
+}
+
 .header-color{
 background: #1D4350;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to left, #A43931, #1D4350);  /* Chrome 10-25, Safari 5.1-6 */
@@ -56,7 +61,7 @@ Grid .background {
 .banner-text {
   background-color: black;
   opacity: .8;
-  width: 75%;
+  width: 100%;
   margin : auto;
   border-radius: 10px;
 }
